Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135360

Unexpected Qt Multimedia warning message

    XMLWordPrintable

Details

    • Linux/Yocto
    • 5249d621b (dev), 4eaf83d14 (6.9), 4dcfa3eb5 (tqtc/lts-6.8)
    • Multimedia, weeks 15-16

    Description

      Unexpected warning messages after upgrading our project to Qt 6.8.2 from Qt 6.6.3.

      The target device is running a Yocto Scarthgap system on an Intel Atom board.

      Using various GStreamer pipelines, although Qt Multimedia is set to use FFmpeg as backend. The current packages versions are:

      • ffmpeg 6.1.1
      • GStreamer 1.20.7

      The system builds successfully, but some of the tests do fail. On further investigation we have observed the following unexpected warning messages
      when playing a video:

      'Cannot determine any usable texture format, using preferred format 4'

      The video playback is subjectively unaffected.

      The message is logged roughly each frame, and after browsing the Qt source code, seems related to the video pixel format. Here are the codec info related to our video file (output from ffprobe):

      Metadata:
      major_brand : mp42
      minor_version : 0
      compatible_brands: mp42mp41
      creation_time : 2022-09-13T13:00:44.000000Z
      Duration: 00:00:09.87, start: 0.000000, bitrate: 2240 kb/s
      Stream #0:0[0x1](eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(progressive), 1080x1080 [SAR 1:1 DAR 1:1], 1903 kb/s, 60 fps, 60 tbr, 60k tbn (default)
      Metadata:
      creation_time : 2022-09-13T13:00:44.000000Z
      handler_name : ?Mainconcept Video Media Handler
      vendor_id : [0][0][0][0]
      encoder : AVC Coding
      Stream #0:1[0x2](eng): Audio: aac (LC) (mp4a / 0x6134706D), 48000 Hz, stereo, fltp, 316 kb/s (default)
      Metadata:
      creation_time : 2022-09-13T13:00:44.000000Z
      handler_name : #Mainconcept MP4 Sound Media Handler
      vendor_id : [0][0][0][0]

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-135360
          # Subject Branch Project Status CR V

          Activity

            People

              mikko.hallamaa Mikko Hallamaa
              tommimtauriainen Tommi M. Tauriainen
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes